--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Cerrar pestaña</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Protección de privacidad del sitio web</string>
+    <string name="privacyProtectionEnabled">PROTECCIÓN DEL SITIO WEB HABILITADA</string>
+    <string name="privacyProtectionDisabled">PROTECCIÓN DEL SITIO WEB DESHABILITADA</string>
     <string name="privacyDashboardActivityTitle">Panel de privacidad</string>
-    <string name="privacyProtectionEnabled">PROTECCIÓN DE LA PRIVACIDAD ACTIVADA</string>
-    <string name="privacyProtectionDisabled">PROTECCIÓN DE LA PRIVACIDAD DESACTIVADA</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">MEJORA DE &lt;img src="%d" /&gt; CON &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Nivel de privacidad</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Las prácticas de privacidad resultan de <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Icono de buenas prácticas</string>
     <string name="practicesIconContentBad">Icono de malas prácticas</string>
-    <string name="privacyProtectionToggle">Protección de la privacidad</string>
 
     <string name="networkTrackerSummaryHeader">PRINCIPALES DELINCUENTES DE LAS REDES DE RASTREADORES</string>
     <string name="networkTrackerSummaryNotReady">Continuamos recopilando datos que demuestran cuántos rastreadores hemos bloqueado.</string>
@@ -396,4 +396,55 @@
     <string name="daxNonSerpCtaText">A medida que navegues y te desplaces, bloquearé rastreadores molestos. &lt;br/&gt;&lt;br/&gt;Adelante, ¡sigue navegando!</string>
     <string name="daxMainNetworkOwnedCtaText">¡Cuidado! %s pertenece %s.&lt;br/&gt;&lt;br/&gt;Los rastreadores de %s acechan en %s de los principales sitios web &#128561; ¡pero no te preocupes! &lt;br/&gt;&lt;br/&gt;Bloquearé a %s para que no vean tu actividad en esos sitios.</string>
     <string name="daxMainNetworkCtaText">¡Cuidado! %s es una importante red de rastreo.&lt;br/&gt;&lt;br/&gt; Sus rastreadores acechan en aproximadamente %s de los sitios principales &#128561; ¡pero no te preocupes! &lt;br/&gt;&lt;br/&gt;Bloquearé a %s para que no vea tu actividad en esos sitios.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Continuar</string>
+    <string name="downloadConfirmationSaveFileTitle">Guardar %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Mantener los dos</string>
+    <string name="downloadConfirmationReplaceOldFileText">Reemplazar</string>
+    <string name="downloadConfirmationOpenFileText">Abrir</string>
+    <string name="downloadConfirmationUnableToOpenFileText">No se ha podido abrir el archivo</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">No ha podido eliminar el archivo antiguo</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Icono de la aplicación</string>
+    <string name="changeIconCtaLabel">Cambiar icono de la aplicación</string>
+    <string name="changeIconCtaAccept">Usar</string>
+    <string name="changeIconCtaCancel">Cancelar</string>
+    <string name="changeIconDialogTitle">¿Usar nuevo icono?</string>
+    <string name="changeIconDialogMessage">La aplicación puede cerrarse para actualizar los cambios. Vuelve después de que hayas admirado tu nuevo y atractivo icono.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Administrar lista blanca</string>
+    <string name="reportBrokenSite">Reportar sitio web roto</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Añadir</string>
+    <string name="dialogEditTitle">Editar</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Lista blanca</string>
+    <string name="whitelistAdd">Agregar a la lista blanca</string>
+    <string name="whitelistRemove">Eliminar de la lista blanca</string>
+    <string name="whitelistEntryOverflowContentDescription">Más opciones para el sitio web de la lista blanca %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">¿Estás seguro de que desea eliminar &lt;b&gt;%s&lt;/b&gt; de la lista blanca?</string>
+    <string name="whitelistExplanation">Estos sitios web incluidos en la lista blanca no se actualizarán por Protección de Privacidad</string>
+    <string name="whitelistNoEntries">Aún no hay sitios web en la lista blanca</string>
+    <string name="whitelistDomainHint">www.ejemplo.com</string>
+    <string name="whitelistFormatError">No se ha podido guardar, ingresa un dominio como <b>ejemplo.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Lista blanca de Protección de Privacidad</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Sitios web a prueba de fuego</string>
+    <string name="settingsFireproofWebsites">Sitios web a prueba de fuego</string>
+    <string name="fireproofWebsiteMenuTitle">Sitio web a prueba de fuego</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">¡&lt;b&gt;%s&lt;/b&gt; es ahora a prueba de fuego! Visita Ajustes para obtener más información.</string>
+    <string name="fireproofWebsiteSnackbarAction">Deshacer</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">¿Está seguro de que desea eliminar &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Todavía no hay sitios web a prueba de fuego</string>
+    <string name="fireproofWebsiteFeatureDescription">Los sitios web usan cookies para mantener la sesión del usuario. Cuando hagas un sitio web a prueba de fuego, las cookies no se borrarán y permanecerás conectado, incluso después de usar el botón fuego.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Más opciones para el sitio web a prueba de fuego %s</string>
 </resources>
