--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -2,4 +2,4 @@
 We've improved the animation in the URL bar that shows you when the app blocks third party trackers.
 
 ## Have feedback?
-You can always reach us at https://duckduckgo.com/feedback.
+We've adjusted the color contrast in both light and dark themes to improve visibility.
