--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-We've improved the animation in the URL bar that shows you when the app blocks third party trackers.
+Bug fixes and other improvements.
 
 ## Have feedback?
 We've adjusted the color contrast in both light and dark themes to improve visibility.
