--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,4 +1,5 @@
 ## What's new in this release?
+Now the app can prompt you to Fireproof a site when you sign in. Enable this in Settings > Fireproof Websites.
 Bug fixes and other improvements.
 
 ## Have feedback?
