--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -423,11 +423,11 @@
     <string name="dialogEditTitle">Editar</string>
 
     <!-- Whitelist -->
-    <string name="whitelisetActivityTitle">Gestionar Protección</string>
+    <string name="whitelisetActivityTitle">Sitios no protegidos</string>
     <string name="whitelistAdd">Habilitar Protección</string>
     <string name="whitelistRemove">Deshabilitar Protección</string>
     <string name="whitelistEntryOverflowContentDescription">Más opciones para el sitio no protegido %s</string>
-    <string name="whitelistEntryDeleteConfirmMessage">Seguro que quieres habilitar de nuevo Protección de Privacidad para el sitio &lt;b>%s&lt;/b>?</string>
+    <string name="whitelistEntryDeleteConfirmMessage">¿Seguro que quieres eliminar &lt;b>%s&lt;/b> de los sitios no protegidos?</string>
     <string name="whitelistExplanation">La Protección de Privacidad está deshabilitada para estos sitios</string>
     <string name="whitelistNoEntries">Protección de Privacidad habilitada para todos los sitios.</string>
     <string name="whitelistDomainHint">www.ejemplo.com</string>
