Update version number and release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -3,4 +3,4 @@ Now the app can prompt you to Fireproof a site when you sign in. Enable this in 
 Bug fixes and other improvements.
 
 ## Have feedback?
-We've adjusted the color contrast in both light and dark themes to improve visibility.
+You can always reach us at https://duckduckgo.com/feedback.
